Bug 1901483 - do not report metadataload again when switching from media engine playback to normal playback. r=media-playback-reviewers,padenot

We initially added this in D203062, but remove it in D212064. The reason
of removing it is because not setting up the status for a newly created
MDSM causes Netflix's problem.

However, the situation of reinforming metadata load still exists, eg.
switching from the media engine playback to the normal playback,
which could be seen in the clearlead situation. That seems a possible
case to hit the assertion [1]. Therefore, we should add back the
mechanism of not informing the metadata load again, but also keep the
status being set properly.

In addition, we will handle the process of dispatching `loadedmetadata`
properly in bug 1906206.

[1]
https://searchfox.org/mozilla-central/rev/a67f92611070fcdba22a106ee140ab0059cc4611/dom/html/HTMLMediaElement.cpp#3916

Differential Revision: https://phabricator.services.mozilla.com/D215820