dom/media/MediaDecoder.h
@@ -539,6 +539,13 @@ class MediaDecoder : public DecoderDoctorLifeLogger<MediaDecoder> {
   // double.
   Variant<media::TimeUnit, double> mDuration;
 
+#  ifdef MOZ_WMF_MEDIA_ENGINE
+  // True when we need to update the newly created MDSM's status to make it
+  // consistent with the previous destroyed one.
+  bool mPendingStatusUpdateForNewlyCreatedStateMachine = false;
+  void SetStatusUpdateForNewlyCreatedStateMachineIfNeeded();
+#  endif
+
   /******
    * The following member variables can be accessed from any thread.
    ******/
@@ -827,12 +834,6 @@ class MediaDecoder : public DecoderDoctorLifeLogger<MediaDecoder> {
   bool mCanPlayThrough = false;
 
   UniquePtr<TelemetryProbesReporter> mTelemetryProbesReporter;
-
-#  ifdef MOZ_WMF_MEDIA_ENGINE
-  // True when we need to update the newly created MDSM's status to make it
-  // consistent with the previous destroyed one.
-  bool mPendingStatusUpdateForNewlyCreatedStateMachine = false;
-#  endif
 
   // The time of creating the media decoder state machine, it's used to record
   // the probe for measuring the first video frame loaded time. Reset after
